manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  labels:
    app: dialog-flow
  #namespace: dialog-flow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dialog-flow
  template:
    metadata:
      labels:
        app: dialog-flow
    spec:
      containers:
      - name: time
        image: gcr.io/andresolarte-istio-pg/time-lady:93a7deb
        ports:
        - containerPort: 8080
