manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: web-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/name: hello-world
  sessionAffinity: None
  type: ClusterIP
