manifests/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: hello-world
  name: hello-world
  namespace: web-app
spec:
  gateways:
  - hello-world/hello-world-gateway
  hosts:
  - hello-world.gscout.xyz
  http:
  - route:
    - destination:
        host: hello-world
        port:
          number: 8080
